lecture 77: swagger code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-logging.level.org.org.springframework= info
+#//oussama find how to show mapping url like in lecture 74 min 3:49
+logging.level.org.springframework = info
 spring.messages.basename= messages
