--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 #//oussama find how to show mapping url like in lecture 74 min 3:49
 logging.level.org.springframework = info
 spring.messages.basename= messages
+
+#swagger: 
+#http://localhost:8080/v2/api-docs
+#http://localhost:8080/swagger-ui.html#/
+#
+#acutator : 
+#http://localhost:8080/actuator
+#http://localhost:8080  for hal browser
+
+
+#enabling web exposure of everything... this is for actuator
+management.endpoints.web.exposure.include= *
