--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.messages.basename= messages
 
 #enabling web exposure of everything... this is for actuator
 management.endpoints.web.exposure.include= *
+
+
+spring.security.user.name= username
+spring.security.user.password=password
